# raytracing

./: .gitignore  CMakeLists.txt  README.md  image.ppm  main.cpp
src/: camera.h  color.h  hittable.h  hittable_list.h  lambertian.h  main.cpp  material.h  ray.h  sphere.h  utility.h  vec3.h
